--- a/coffees/templates/coffees/coffee_detail.html
+++ b/coffees/templates/coffees/coffee_detail.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
+
+<style>
+    input{
+        width: 100%;
+        height: 50px;
+        font-size: 1.5em;
+    }
+</style>
 
 <div class="container-fluid px-3 mb-4">
     <div class="row">
@@ -9,14 +19,32 @@
         </div>
         <div class="col-lg-5 col-sm-10 coffeeName mx-2 mt-2 pt-5">
             <h1 class="display-4 mb-3">{{coffee.name}}</h2>
+            <p class="fw-bold">${{coffee.price|floatformat:2}}</p>
+
             <h4 class="fw-bold">{{coffee.notes}}</h4>
             <p class="fw-light">Country: {{coffee.country}}</p>
             <p class="fw-light">Region: {{coffee.region}}</p>
             <p class="fw-light">Altitude: {{coffee.altitude}}</p>
             <p>{{coffee.description}}</p>
-            <p class="fw-bold">${{coffee.price|floatformat:2}}</p>
+            <hr>
+
+            <form action="{% url 'cart:cart_add' product_id=coffee.id %}" method="post">
+                <div class="row">
+                    <div class="col">
+                        {{ cart_add_form }}
+                    </div>
+                    <div class="col">
+                        {% csrf_token %}
+                        <input type="submit" class='btn btn-dark' value="Add to cart">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
 
+{% endblock %}
+
+{% block js %}
+    <script type="text/javascript" src="{% static 'coffee_shop/js/cart.js' %}"></script>
 {% endblock %}
