--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'coffee_shop/images/favicon.png' %}" type="image/x-icon">
 
-    <!-- CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'coffee_shop/css/base.css' %}">
     {% block css %}
-    {% endblock %}
-
-    <!-- JS -->
-    {% block js %}
     {% endblock %}
 
 </head>
@@ -65,6 +61,9 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-   
+    
+    {% block js %}
+
+    {% endblock %}
 </body>
 </html>
