--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,19 @@
 {% load static %}
+
+<style>
+  #cart-total{
+    display: block;
+    text-align: center;
+    color:#fff;
+    background-color: rgb(74, 74, 74);
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    font-size: 15px;
+    margin-right: 12px;
+}
+</style>
+
 <!-- Navbar -->
 
 <nav class="navbar navbar-expand-lg fixed-top">
@@ -43,15 +58,18 @@
       </div>
     
       <ul class="navbar-nav ms-auto mb-lg-0">
+
+      <li class="nav-item">
+          <a class="nav-link active px-0" href="{% url 'cart:cart_detail' %}"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" style="display:inline-block; vertical-align:middle;" class="bi bi-cart2" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+          </svg></a>
+      </li>
+      <li class="nav-item">
+        <p id="cart-total">{{cart|length}}</p>
+      </li>
       
       {% if user.is_authenticated %}
 
-      <li class="nav-item">
-        <a class="nav-link active px-3" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" style="display: inline;" class="bi bi-cart2" viewBox="0 0 16 16">
-          <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-        </svg></a>
-      </li>
-      
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           {{ request.session.avatar | safe }}
@@ -73,12 +91,6 @@
       </li>
 
       {% else %}
-
-        <li class="nav-item">
-          <a class="nav-link active px-4" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" style="display:block;" class="bi bi-cart2" viewBox="0 0 16 16">
-            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-          </svg></a>
-        </li>
 
         <li class="nav-item">
           <a class="btn loginNavButton" href="{% url 'accounts:login' %}">Log in 
