--- a/static/coffee_shop/css/base.css
+++ b/static/coffee_shop/css/base.css
@@ -1,5 +1,6 @@
 html, body{
     font-family: 'Rajdhani', sans-serif;
+    font-weight: 500;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -13,11 +14,17 @@ html, body{
 
 .nav-link{
     opacity: 0.80;
+    font-weight: 500;
 }
 
 .nav-link:hover{
     opacity: 1;
 }
+
+/* .nav-item{
+    background-color: rgba(255, 255, 255, 0.669);
+    border-radius: 20px;
+} */
 
 .dropdown:hover .dropdown-menu {
     display: block;
