--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,15 +2,15 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container col-lg-9">
 
-    <div class="px-3 py-4 my-5 m-auto rounded-3 col-sm-10 text-white logInJumbotron">
+    <div class="px-3 py-4 my-5 m-auto rounded-3 text-white logInJumbotron">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Log In</h1>
           <h4>Enter your email and password below to log in</h4>
         </div>
     </div>
-    <div class="m-auto col-sm-10">
+    <div class="m-auto">
         <div class="container-fluid">
         
         {% if form.errors %}
@@ -33,5 +33,6 @@
         </form>
         </div>
     </div>
+</div>
 
 {% endblock %}
