--- a/coffees/templates/coffees/coffee_detail.html
+++ b/coffees/templates/coffees/coffee_detail.html
@@ -5,11 +5,46 @@
 {% block content %}
 
 <style>
-    input{
+    .btn-dark{
         width: 100%;
         height: 50px;
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
+
+    form {
+        text-align: center;
+        margin: 0;
+        margin-top: 30px;
+    }
+
+    .quantity input {
+        display: inline-block;
+        width: 40px;
+        height: 50px;
+        padding: 0;
+        margin: 0;
+        text-align:center;
+        background: #fff;
+        border: none;
+    }
+
+    .quantity{
+        border: 0.7px solid black;
+        border-radius: 0.375rem;
+    }
+    .coffee-price{
+        font-size: 20px;
+        text-align: end;
+        font-weight:300;
+    }
+
+    /* .img-fluid{
+        position: fixed;
+        width: 48%;
+        margin-bottom: 40px;
+    } */
+
+
 </style>
 
 <div class="container-fluid px-3 mb-4">
@@ -18,27 +53,41 @@
             <img class="img-fluid" src="{{coffee.image.url}}">
         </div>
         <div class="col-lg-5 col-sm-10 coffeeName mx-2 mt-2 pt-5">
-            <h1 class="display-4 mb-3">{{coffee.name}}</h2>
-            <p class="fw-bold">${{coffee.price|floatformat:2}}</p>
 
-            <h4 class="fw-bold">{{coffee.notes}}</h4>
-            <p class="fw-light">Country: {{coffee.country}}</p>
-            <p class="fw-light">Region: {{coffee.region}}</p>
-            <p class="fw-light">Altitude: {{coffee.altitude}}</p>
-            <p>{{coffee.description}}</p>
-            <hr>
+            <div class="row align-items-end">
+                <div class="col-9">
+                    <p class="display-5 mb-1">{{coffee.name}}</p>
+                </div>
+                <div class="col coffee-price">
+                    <p>${{coffee.price|floatformat:2}}</p>
+                </div>
+            </div>
 
             <form action="{% url 'cart:cart_add' product_id=coffee.id %}" method="post">
                 <div class="row">
                     <div class="col">
-                        {{ cart_add_form }}
+                            <div class="quantity">
+                              <input type='button' value='-' class='minus' field='quantity'>
+                              <input type='text' name='quantity' value='1' class='qty'>
+                              <input type='button' value='+' class='plus' field='quantity'>
+                            </div>
                     </div>
                     <div class="col">
                         {% csrf_token %}
-                        <input type="submit" class='btn btn-dark' value="Add to cart">
+                        <input type="hidden" name="from_template" value="coffee_detail">
+                        {% if coffee.out_of_stock %}
+                            <button class="btn btn-dark disabled">Out of Stock</button>
+                        {% else %}
+                            <input class="btn btn-dark" type="submit" value="Add to cart">
+                        {% endif %}
                     </div>
                 </div>
             </form>
+            <h4 class="fw-bold mt-5">{{coffee.notes}}</h4>
+            <p class="fw-light">Country: {{coffee.country}}</p>
+            <p class="fw-light">Region: {{coffee.region}}</p>
+            <p class="fw-light">Altitude: {{coffee.altitude}}</p>
+            <p>{{coffee.description}}</p>
         </div>
     </div>
 </div>
@@ -46,5 +95,5 @@
 {% endblock %}
 
 {% block js %}
-    <script type="text/javascript" src="{% static 'coffee_shop/js/cart.js' %}"></script>
+    <script type="text/javascript" src="{% static 'coffee_shop/js/quantity_input.js' %}"></script>
 {% endblock %}
