--- a/shop/templates/shop/payment.html
+++ b/shop/templates/shop/payment.html
@@ -2,6 +2,26 @@
 
 {% block content %}
 
-<h1>Pay here</h1>
+<style>
+    .payment-div{
+        text-align: center;
+    }
+    .btn-dark{
+        width: 300px;
+        height: 150px;
+        font-size: 90px;
+        font-weight: 500;
+        opacity: 0.85;
+        border-radius: 25px;
+    }
+
+    .btn-dark:hover{
+        opacity: 1;
+    }
+</style>
+
+<div class="col-md-5 m-auto payment-div">
+    <a class="btn btn-dark" href="{% url 'shop:paid' pk=order_pk %}">Pay</a>
+</div>
 
 {% endblock %}
