--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
     <!-- Company Description and Images -->
 
-    <div class="px-3 mb-4 m-auto col-lg-6">
+    <div class="px-3 mb-4 m-auto col-lg-7 px-5">
           <h1 id="brandName" class="mt-3 mb-5">UE COFFEE ROASTERS</h1>
           <img class="img-fluid mainPageIMG" src="{% static 'coffee_shop/images/about_2.jpg' %}">
   
