add page titles

--- a/shop/templates/shop/order_history.html
+++ b/shop/templates/shop/order_history.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
+
 {% load custom_tags %}
 {% load static %}
 
+{% block title %}Order History{% endblock %}
 {% block content %}
 
 <style>
