--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %}Coffee Roasters Shop{% endblock %}
 {% block content %}
 
     <!-- Company Description and Images -->
 
     <div class="px-3 mb-4 m-auto col-lg-7 px-5">
-          <h1 id="brandName" class="mt-3 mb-5">UE COFFEE ROASTERS</h1>
+          <h1 id="brandName" class="mt-3 mb-5">COFFEE ROASTERS SHOP</h1>
           <img class="img-fluid mainPageIMG" src="{% static 'coffee_shop/images/about_2.jpg' %}">
   
           <h1 class="display-5 mt-5">About Us</h1>
