--- a/accounts/templates/accounts/profile_update.html
+++ b/accounts/templates/accounts/profile_update.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}{{user.first_name.capitalize}} {{user.last_name.capitalize}} Profile{% endblock %}
+
 {% block content %}
     <!-- Displaying Django messages -->
 
