--- a/coffees/templates/coffees/coffee_list.html
+++ b/coffees/templates/coffees/coffee_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}{% if category_name %}{{category_name}}{% else %}All Coffees{% endif %}{% endblock %}
+
 {% block css %}
 
     <style>
