--- a/templates/base.html
+++ b/templates/base.html
@@ -29,32 +29,31 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'coffee_shop/css/base.css' %}">
+    
     {% block css %}
     {% endblock %}
-
 </head>
+
 <body>
+
     {% include 'navbar.html' %}
 
     {% block content %}
-
     {% endblock %}
 
-      <!-- Footer -->
+    <!-- Footer -->
 
-      <footer class="py-3 border-top mt-auto">
-        <p class="text-center text-muted">2022, Source: <a href="https://uecoffeeroasters.com/" id="copyrightLink">uecoffeeroasters.com</a></p>
-      </footer>
+    <footer class="py-3 border-top mt-auto">
+      <p class="text-center text-muted">2022, Source: <a href="https://uecoffeeroasters.com/" id="copyright-link">uecoffeeroasters.com</a></p>
+    </footer>
 
-      <!-- JQuery and Javascript -->
-    
+    <!-- JQuery and Javascript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     
     {% block js %}
-
     {% endblock %}
+
 </body>
 </html>
