--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,25 +1,30 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Log In{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/accounts/login.css' %}">{% endblock %}
 
 {% block content %}
 
 <div class="container col-lg-9">
 
-    <div class="px-3 py-4 my-5 m-auto rounded-3 text-white logInJumbotron">
+    <div class="px-3 py-4 my-5 text-white login-jumbotron">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Log In</h1>
           <h4>Enter your email and password below to log in</h4>
         </div>
     </div>
+
     <div class="m-auto">
         <div class="container-fluid">
-        
+
         {% if form.errors %}
             {% for field, error in form.errors.items %}
                 <p>{{ error }}</p>
             {% endfor %}
         {%  endif %} 
+
+        <!-- Login Form -->
 
         <form method="POST">
             <div>
@@ -29,10 +34,10 @@
                 <p class="my-1">Password</p> 
                 <p class="my-1">{{ form.password }} </p>
             </div>
-    
-            <input type="submit" id="submitButton" class="btn btn-dark my-3" value="Login"> 
+            <input type="submit" id="submit-button" class="btn btn-dark my-3" value="Login"> 
             <p class="text-muted">Don't have an account yet? <a class='ml-2' href="{% url 'accounts:signup' %}">Sign Up</a></p>
         </form>
+
         </div>
     </div>
 </div>
