--- a/accounts/templates/accounts/profile_update.html
+++ b/accounts/templates/accounts/profile_update.html
@@ -1,99 +1,104 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}{{user.first_name.capitalize}} {{user.last_name.capitalize}} Profile{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/accounts/profile_update.css' %}">{% endblock %}
 
 {% block content %}
-    <!-- Displaying Django messages -->
 
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-dismissible {{ message.tags }}">
-            <button type="button" class="btn-close me-auto" data-dismiss="alert" aria-label="Close">
-            </button>
-          <strong>{{message}}</strong>
-        </div>
-      {% endfor %}
-    {% endif %}
+<!-- Displaying Django messages -->
 
-    <div class="container-fluid col-11 col-lg-6 my-3">
-        
-        <div style="text-align:center;">
-            {{ request.session.large_avatar | safe }}
-            <h3 class="py-3">{{ user.first_name.capitalize }} {{ user.last_name.capitalize }}</h3>
-        </div>   
-
-        <form method="POST">
-            {% csrf_token %}
-
-            <h3 class="fw-light">Personal Info</h3>
-            <hr>
-            <table class="table table-borderless">
-                <tr>
-                    <td>Username</td>
-                    <td>{{ form.username }}</td>
-                </tr>
-                <tr>
-                    <td>First Name</td>
-                    <td>{{ form.first_name }}</td>
-                </tr>
-                <tr>
-                    <td>Last Name</td>
-                    <td>{{ form.last_name }}</td>
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td>{{ form.email }}</td>
-                </tr>
-            </table>
-            <input type="submit" id="submitButton" name="profile_info_sub" class="btn btn-dark my-3" value="Save" style="display: block; margin-right:0; margin-left:auto;">
-        </form>
-
-        <form method="POST" action="{% url 'accounts:password_change' pk=user.pk %}">
-            {% csrf_token %}
-
-            <h3 class="fw-light">Change Password</h3>
-            <hr>
-            <table class="table table-borderless">
-                <tr>
-                    <td>Enter your old password:</td>
-                    <td>{{ password_form.old_password }}</td>
-                </tr>
-                <tr>
-                    <td>Enter new password:</td>
-                    <td>{{ password_form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>Confirm new password:</td>
-                    <td>{{ password_form.new_password2 }}</td>
-                </tr>
-            </table>
-            <input type="submit" class="btn btn-info my-3" value="Change Password" style="display: block; margin-right:0; margin-left:auto;">
-        </form>
-
-            <h3 class="fw-light">Delete Account</h3>
-            <hr>
-            <p><span style="color:rgb(162, 60, 13);">Warning:</span> If you close your account, all your personal data will be removed, as well as information about you orders and favourites list.</p>
-            <a href="#exampleModal" role="button" class="btn btn-danger mb-3" id="confirmDelete" data-bs-toggle="modal" data-target="#exampleModal">Delete Account</a>
-
-        </form>
-
+{% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-dismissible {{ message.tags }}">
+        <button type="button" class="btn-close me-auto" data-dismiss="alert" aria-label="Close">
+        </button>
+        <strong>{{message}}</strong>
     </div>
+    {% endfor %}
+{% endif %}
 
+<div class="container-fluid col-11 col-lg-6 my-3 profile-update">
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-          <p class="mt-3">Are you sure you want to delete your account?</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <form method="POST" action="{% url 'accounts:delete' pk=user.pk %}">{% csrf_token %}<input type="submit" class="btn btn-danger" value="Delete"></form>
-        </div>
-      </div>
-    </div>
+    <div class="profile-head">
+        {{ request.session.large_avatar | safe }}
+        <h3 class="py-3">{{ user.first_name.capitalize }} {{ user.last_name.capitalize }}</h3>
+    </div>   
+
+    <!-- Profile Info Section  -->
+
+    <form method="POST">
+        {% csrf_token %}
+        <h3 class="fw-light">Personal Info</h3>
+        <hr>
+        <table class="table table-borderless">
+            <tr>
+                <td>Username</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>First Name</td>
+                <td>{{ form.first_name }}</td>
+            </tr>
+            <tr>
+                <td>Last Name</td>
+                <td>{{ form.last_name }}</td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>{{ form.email }}</td>
+            </tr>
+        </table>
+        <input type="submit" id="submit-button" class="btn btn-dark my-3" value="Save">
+    </form>
+
+    <!-- Password Change Section -->
+
+    <form method="POST" action="{% url 'accounts:password_change' pk=user.pk %}">
+        {% csrf_token %}
+        <h3 class="fw-light">Change Password</h3>
+        <hr>
+        <table class="table table-borderless">
+            <tr>
+                <td>Enter your old password:</td>
+                <td>{{ password_form.old_password }}</td>
+            </tr>
+            <tr>
+                <td>Enter new password:</td>
+                <td>{{ password_form.new_password1 }}</td>
+            </tr>
+            <tr>
+                <td>Confirm new password:</td>
+                <td>{{ password_form.new_password2 }}</td>
+            </tr>
+        </table>
+        <input type="submit" class="btn btn-info my-3" value="Change Password">
+    </form>
+
+    <!-- Delete Account Section -->
+
+    <h3 class="fw-light">Delete Account</h3>
+    <hr>
+    <p><span id="warning">Warning:</span> If you close your account, all your personal data will be removed, as well as information about you orders and favourites list.</p>
+    <a href="#delete-modal" role="button" class="btn btn-danger mb-3" data-bs-toggle="modal" data-target="#delete-modal">Delete Account</a>
+
 </div>
 
+
+<!-- Delete Account Modal -->
+
+<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p class="mt-3">Are you sure you want to delete your account?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <form method="POST" action="{% url 'accounts:delete' pk=user.pk %}">{% csrf_token %}<input type="submit" class="btn btn-danger" value="Delete"></form>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
