--- a/coffees/templates/coffees/coffee_list.html
+++ b/coffees/templates/coffees/coffee_list.html
@@ -1,70 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}{% if category_name %}{{category_name}}{% else %}All Coffees{% endif %}{% endblock %}
-
-{% block css %}
-
-    <style>
-        h1{
-            text-align: center;
-        }
-        a{
-            color: black;
-            text-decoration: none;
-        }
-        a:hover{
-            color:black;
-            position: relative;
-        }
-        .card-title{
-            font-size: 1.2em;
-            font-weight: lighter;
-        }
-
-        .cart-button{
-            display: none;
-            border: 0.7px solid black;
-        }
-
-        @media (max-width: 768px) {
-            .card{
-                margin-left: 0 !important;
-            }
-            .card-title{
-            font-size: 2em;
-        }
-        }
-
-        @media screen and (min-width: 769px) {
-            .card {
-                width: 45%;
-            }
-            .card:hover {
-            transform: scale(1.1);
-            box-shadow: 2px 4px 4px 2px rgba(22, 22, 26, 0.18);
-            z-index: 2;
-            margin-bottom: 0;
-        }
-
-        .card {
-            transition: transform 0.2s ease;
-            z-index: 1;
-            margin-bottom: 35px;
-        }
-        .card:hover .cart-button, .cart-button:hover{
-            display: inline-block;
-            width: 100%;
-        }
-
-        }
-        @media screen and (min-width: 1200px) {
-            .card {
-                width: 30%;
-            }
-        }
-    </style>
-
-{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/coffees/coffee_list.css' %}">{% endblock %}
 
 {% block content %}
 
@@ -74,16 +12,17 @@
     <div class="row row-cols-md-3">
 
         {% for coffee in coffee_list %}
-            <div class="card mx-3" style="border:none;">
+
+            <!-- Coffee Card -->
+            <div class="card mx-3">
                 <a href="{% url 'coffees:coffee_detail' pk=coffee.pk %}">
                     <img class="card-img-top" src="{{coffee.image.url}}" alt="Card image cap">
                 </a>
                 <div class="card-body">
-                    <p class="card-text card-title"><a href="{% url 'coffees:coffee_detail' pk=coffee.pk %}">{{coffee.name}}</a></p>
-                    <p class=" col card-text fw-bold mb-3">${{coffee.price|floatformat:2}}</p>
+                    <p class="card-title"><a href="{% url 'coffees:coffee_detail' pk=coffee.pk %}">{{coffee.name}}</a></p>
+                    <p class="col fw-bold mb-3">${{coffee.price|floatformat:2}}</p>
 
                     <!-- Add to Cart Button -->
-
                     <form action="{% url 'cart:cart_add' product_id=coffee.pk %}" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="quantity" value="1">
