--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -1,171 +1,117 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Checkout{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/shop/checkout.css' %}">{% endblock %}
 
 {% block content %}
 
-<style>
-    #cart-link{
-        font-size: 20px;
-        color:rgb(228, 174, 12);
-        text-decoration: none;
-    }
+<div class="container-fluid col-lg-9 col-11 mt-2 mb-3">
 
-    .order-area{
-        background-color: rgba(16, 16, 16, 0.901);
-        border-radius: 7px;
-        padding-top: 5px;
-        padding-bottom: 8px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
+    <div class="row mt-3">
 
-    table{
-        width: 100%;
-    }
-    td{
-        font-size: 15px;
-        padding-bottom: 10px;
-    }
+        <!-- Order Forms -->
+        <div class="col-7 px-4 order-forms-outer">
+            <div class="order-forms-inner">
+                
+                <a href="{% url 'cart:cart_detail' %}" id="cart-link">&#8592; Back to cart</a>
 
-    td img{
-        border-radius: 5px;
-    }
+                <form method="POST" action="{% url 'shop:create_order' %}" id="order-form">
+                    {% csrf_token %}
 
-    #remove-coupon{
-        color:white; 
-        text-decoration:none; 
-        font-size: 12px; 
-        opacity: 0.6;
-    }
-    #remove-coupon:hover{
-        opacity: 0.8;
-    }
-    #order-button{
-        background-color: rgb(248, 187, 5);
-        width: 100%;
-        height: 50px;
-        border-radius: 7px;
-        color: #F1FAEE;
-        cursor: pointer;
-        font-size: 20px;
-        margin-top: 10px;
-    }
+                    <!-- Contact Info -->
+                    <div class="my-3">
+                        <h4 class="fw-light pb-2">Contact information</h4>
 
-    .payment-method label{
-        font-size: 1em;
-    }
+                        {% if not request.user.is_authenticated %}
+                        <p class="py-1">Already have an account? 
+                            <a href="#login-modal" role="button" id="login-link" data-bs-toggle="modal" data-target="#LoginModal">Log in</a>
+                            to save your order history.</p>
+                        {% endif %}
 
-    #login-link, #signup-link{
-        color:#0dcaf0;
-    }
-
-    @media (max-width: 768px) {
-        .order-items{
-            width: 100%;
-        }
-        
-        .order-forms{
-            width: 100%;
-        }
-    }
-</style>
-
-<div class="container-fluid col-lg-9 my-3">
-    <a href="{% url 'cart:cart_detail' %}" id="cart-link">&#8592; Back to cart</a>
-
-    <div class="row mt-4">
-        <div class="col-7 px-4 order-forms">
-
-            <form method="POST" action="{% url 'shop:create_order' %}" id="order-form">
-                {% csrf_token %}
-            <div class="contact-info mb-5">
-                <h4 class="fw-light pb-2">Contact information</h4>
-
-                {% if not request.user.is_authenticated %}
-                <p class="py-1">Already have an account? 
-                    <a href="#LoginModal" role="button" id="login-link" data-bs-toggle="modal" data-target="#LoginModal">Log in</a>
-                    to save your order history.</p>
-                {% endif %}
-
-                <div class="row">
-                    <p class="col-6">{{contact_form.first_name}}</p>
-                    <p class="col-6">{{contact_form.last_name}}</p>
-                </div>
-                    {{contact_form.email}}
-            </div>
-
-            <div class="shipping-address mb-5">
-                <h4 class="fw-light pb-2">Shipping Address</h4>
-                <p>{{address_form.address}}</p>
-                <div class="row">
-                    <p class="col-6">{{address_form.city}}</p>
-                    <p class="col-6">{{address_form.state}}</p>
-                </div>
-                <p>{{address_form.postal_code}}</p>
-                <p>{{address_form.country}}</p>
-            </div>
-
-            <div class="payment-method mb-3">
-                <h4 class="fw-light pb-2">Payment method</h4>
-                {{payment_form.payment}}
-            </div>
-
-        </div>
-    </form>
-        <div class="col-5 mt-2 order-items">
-            <div class="text-white order-area p-4">
-            <table class="table-borderless">
-            <h3 class="py-2 fw-light">Your Order:</h3>
-            {% for item in cart %}
-                {% with product=item.product %}   
-                    {% if item.total_price %}         
-                    <tr class="order-item">
-                        <td width="10%"><img src="{{ product.image.url }}" width="50px" height="50px"></td>
-                        <td width="70%" class="px-3">{{ product.name }}</td>
-                        <td width="7%">x{{ item.quantity }}</td>
-                        <td width="7%">${{ item.total_price|floatformat:2 }}</td>
+                        <div class="row">
+                            <p class="col-6">{{contact_form.first_name}}</p>
+                            <p class="col-6">{{contact_form.last_name}}</p>
                         </div>
-                    </tr>
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-            </table>
+                            {{contact_form.email}}
+                    </div>
+
+                    <!-- Shipping Address -->
+                    <div class="shipping-address mb-3">
+                        <h4 class="fw-light pb-2">Shipping Address</h4>
+                        <p>{{address_form.address}}</p>
+                        <div class="row">
+                            <p class="col-6">{{address_form.city}}</p>
+                            <p class="col-6">{{address_form.state}}</p>
+                        </div>
+                        <p>{{address_form.postal_code}}</p>
+                        <p>{{address_form.country}}</p>
+                    </div>
+
+                    <!-- Payment Method -->
+                    <div class="payment-method mb-2">
+                        <h4 class="fw-light pb-2">Payment method</h4>
+                        {{payment_form.payment}}
+                    </div>
+
+                    <input class="btn btn-warning" type="submit" id="order-button" value="Place order">
+                </form>
+            </div>
+        </div>
+
+         <!-- Order Items -->
+         <div class="col-5 order-items mt-3">
+            <div class="text-white order-area pb-4 px-4">
+
+                <table class="table-borderless">
+                <h3 class="py-3 fw-light">Your Order:</h3>
+                {% for item in cart %}
+                    {% with product=item.product %}   
+                        {% if item.total_price %}         
+                        <tr class="order-item">
+                            <td width="10%"><img src="{{ product.image.url }}"></td>
+                            <td width="70%" class="px-3">{{ product.name }}</td>
+                            <td width="7%">x{{ item.quantity }}</td>
+                            <td width="7%">${{ item.total_price|floatformat:2 }}</td>
+                        </tr>
+                        {% endif %}
+                    {% endwith %}
+                {% endfor %}
+                </table>
            
+                <!-- Coupon Form -->
                 <form action="{% url 'coupons:apply' %}" method="post" id="coupon-form">
                     <div class="row my-3">
                         {% csrf_token %}
                         <span class="col-7">{{coupon_form}}</span>
-                        <button class="col-5 btn btn-dark" id="submit-coupon" style="border: 0.8px solid white; width: 39%;">Apply</button>
+                        <button class="col-5 btn btn-dark" id="submit-coupon">Apply</button>
                     </div>
 
                     {% if messages %}
                         {% for message in messages %}
-                            <p style="color:rgb(241, 101, 85);">{{message}}</p>
+                            <p id="error-message">{{message}}</p>
                         {% endfor %}
                     {% endif %}
                 </form>
             
-            <hr class="mt-2">
-            {% if request.session.coupon_id %}
-                <div class="row" style="text-align:right; color:rgb(228, 174, 12)">        
-                    <h5 class="col fw-light"><a href="{% url 'coupons:remove' %}" id="remove-coupon">&#x2715</a> {{request.session.coupon_code}} {{request.session.coupon_discount}}% off</h5>
-                </div> 
-                    <h5 class="col fw-light" style="text-align:right;">Total: ${{cart.get_coupon_price|floatformat:2}}</h5>
-                
-            {% else %}
-                <h5 class="mt-3 fw-light" style="text-align:right;">Total: ${{cart.get_total_price|floatformat:2}}</h5>
-            {% endif %}
+                <!-- Total Price -->
+                <hr class="mt-2">
+                {% if request.session.coupon_id %}
+                    <div class="row coupon-applied">        
+                        <h5 class="col fw-light"><a href="{% url 'coupons:remove' %}" id="remove-coupon">&#x2715</a> {{request.session.coupon_code}} {{request.session.coupon_discount}}% off</h5>
+                    </div> 
+                        <h5 class="col fw-light" style="text-align:right;">Total: ${{cart.get_coupon_price|floatformat:2}}</h5>
+                {% else %}
+                    <h5 class="mt-3 fw-light total-price">Total: ${{cart.get_total_price|floatformat:2}}</h5>
+                {% endif %}
             </div>
-
-            <input class="btn btn-warning" type="submit" id="order-button" value="Place order">
-
         </div>
+    </div>
     </div>
 </div>
 
 <!-- Login Modal -->
-<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-body">
@@ -177,12 +123,10 @@
                     <p class="my-1">Password</p> 
                     <p class="my-1">{{ login_form.password }} </p>
                 </div>
-        
                 <p class="text-muted mt-3">Don't have an account yet? <a class='ml-2' id="signup-link" href="{% url 'accounts:signup' %}">Sign Up</a></p>
-            
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" style="border: 1px solid black" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-default" data-bs-dismiss="modal">Cancel</button>
           <input type="hidden" name="checkout_login" value="True">
           <input type="submit" class="btn btn-dark" id="login-button" value="Login"> 
         </div>
@@ -190,15 +134,5 @@
       </div>
     </div>
 </div>
-
-{% block js %}
-    <script>
-        jQuery(document).ready(function(){
-            $("#order-button").click(function(){
-                $("#order-form").submit()
-            });
-        });
-    </script>
-{% endblock %}
 
 {% endblock %}
