--- a/shop/templates/shop/order_confirmation.html
+++ b/shop/templates/shop/order_confirmation.html
@@ -1,36 +1,23 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Order #{{order_pk}}{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/shop/order_confirmation.css' %}">{% endblock %}
 
 {% block content %}
 
-<style>
-    h1{
-        font-family: 'IM Fell DW Pica', serif;
-    }
-    .thank-you{
-        text-align: center;
-    }
+<div class="col-md-10 m-auto thank-you">
 
-    #shopping-link{
-        font-size: 20px;
-        text-decoration: none;
-        color: rgb(248, 187, 5);
-    }
-</style>
+    {% for item in order_items %}
+        {% with product=item.item %}
+            <img src={{product.image.url}}>
+        {% endwith %}
+    {% endfor %}
+    
+    <h1 class="mt-5 mb-3">Thank you for your order!</h1>
+    <h4 class="fw-light mb-5">Your order number is {{order_pk}}</h4>
+    <a href="{% url 'coffees:all_coffees' %}" id="shopping-link">&#8592; Back to shopping</a>
 
-    <div class="col-md-10 m-auto thank-you">
-
-        {% for item in order_items %}
-            {% with product=item.item %}
-                <img src={{product.image.url}} width="100px">
-            {% endwith %}
-        {% endfor %}
-        
-        <h1 class="mt-5 mb-3">Thank you for your order!</h1>
-        <h4 class="fw-light mb-5">Your order number is {{order_pk}}</h4>
-        <a href="{% url 'coffees:all_coffees' %}" id="shopping-link">&#8592; Back to shopping</a>
-
-    </div>
+</div>
 
 {% endblock %}
