--- a/shop/templates/shop/payment.html
+++ b/shop/templates/shop/payment.html
@@ -1,24 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+
 {% block title %}Pay{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/shop/payment.css' %}">{% endblock %}
+
 {% block content %}
-
-<style>
-    .payment-div{
-        text-align: center;
-    }
-    .btn-dark{
-        width: 300px;
-        height: 150px;
-        font-size: 90px;
-        font-weight: 500;
-        opacity: 0.85;
-        border-radius: 25px;
-    }
-
-    .btn-dark:hover{
-        opacity: 1;
-    }
-</style>
 
 <div class="col-md-5 m-auto payment-div">
     <a class="btn btn-dark" href="{% url 'shop:paid' pk=order_pk %}">Pay</a>
