--- a/templates/access_denied.html
+++ b/templates/access_denied.html
@@ -1,32 +1,15 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
+{% block title %}403-Access Denied{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'coffee_shop/css/access_denied.css' %}">{% endblock %}
 
 {% block content %}
 
-<style>
-    h1{
-        font-size: 300px;
-        color: rgb(221, 167, 6);
-        line-height: 1;
-        margin-bottom: 0;
-    }
-    .access-text{
-        font-size: 25px;
-        font-weight: 400;
-        margin-left: 35px;
-    }
-    #shopping-link{
-        color:black;
-        padding-left: 25px;
-}
-</style>
-
-<div class="container-fluid col-md-6 m-auto">
-    <h1 class="text-center">403</h1>
-    <p class="text-center access-text">You don't have access to this page.</p>
-    <p class="text-center mt-5"><a href="{% url 'coffees:all_coffees' %}" id="shopping-link">Back to shopping</a></p>
-
+<div class="container-fluid col-md-6 m-auto text-center">
+    <h1 id="error-title">403</h1>
+    <p id="error-text">You don't have access to this page.</p>
+    <p class="mt-5"><a href="{% url 'coffees:all_coffees' %}" id="shopping-link">Back to shopping</a></p>
 </div>
+
 {% endblock %}
