--- a/templates/admin/shop/order/order_list.html
+++ b/templates/admin/shop/order/order_list.html
@@ -1,64 +1,43 @@
 {% extends "admin/base_site.html" %}
 {% load custom_tags %}
+{% load static %}
 
 {% block extrahead %}
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+   <link rel="stylesheet" href="{% static 'coffee_shop/css/admin/order_list.css' %}">
 {% endblock %}
 
 {% block content %}
 
-<style>
-    .orders p{
-        font-size: 13px;
-        margin-bottom: 5px;
-    }
-    
-    .orders h5{
-        color: rgb(213, 161, 4);
-        font-size: 15px;
-        margin-top: 15px;
-    }
-
-    .orders .card{
-        width: 30%;
-    }
-
-    .orders .btn-default{
-        border: 1px solid rgb(43, 117, 30);
-        color: rgb(43, 117, 30);
-        font-size: 10px;
-        width: 80px;
-        margin-left: 20px;
-        vertical-align: bottom;
-    }
-
-</style>
-
 <div class="px-3 mt-2 mb-4 m-auto col-11 orders">
     <div class="row">
+
         {% for order in orders %}
         <div class="card m-3 p-3">
+
             <h3>Order #{{order.pk}}
                 {% if order.complete %}
-                <button class="btn btn-default disabled">Completed</button>
+                <button class="btn btn-default disabled" id="completed">Completed</button>
+                {% elif order.payment == 0 %}
+                <button class="btn btn-default disabled" id="awaiting-payment">Awaiting Payment</button>
                 {% endif %}
             </h3>
 
-            <h5 class="fw-light">Customer:</h5>
+            <h5>Customer:</h5>
             <p>{{order.first_name}} {{order.last_name}}</p>
             <p>{{order.email}}</p>
 
-            <h5 class="fw-light">Shipping Address:</h5>
+            <h5>Shipping Address:</h5>
             <p>{{order.address.address}}</p>
             <p>{{order.address.postal_code}} {{order.address.city}}, {{order.address.state}}</p>
             <p>{{order.address.country.name}}</p>
 
-            <h5 class="fw-light">Order Items:</h5>
+            <h5>Order Items:</h5>
                 <table>
                 {% for product in order_items|get_item:order.pk %}
                     <tr>
-                        <td width='80%'>{{product.item.name}}</td>
-                        <td width='10%'>x{{product.quantity}}</td>
+                        <td>{{product.item.name}}</td>
+                        <td>x{{product.quantity}}</td>
                     </tr>
                 {% endfor %}
                 </table>
